﻿Revision history for {{$dist->name}}

{{$NEXT}}

1.000002 2015-08-16T08:09:03Z 7e56737
 [Documentation]
 - Turns out I suck at L<>, and this release hopefully finally has all the L<> links fixed.

1.000001 2015-08-16T08:00:25Z 1ed7610
 [Documentation Fix]
 - Don't you hate it when you find yourself short of a colon?

1.000000 2015-08-16T07:38:09Z 5020828
 [01 - Version Scheme]
 - Version scheme migrated from mantissa=8 to mantissa=6.
 - This is the primary reason for the 1.x on the box.
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129

 [02 - Installer Changed To ExtUtils::MakeMaker]
 - Many install-time things have changed due to shipping with ExtUtils::MakeMaker as the installer
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [Dependencies::Stats]
 - Dependencies changed since 0.01060817, see misc/*.deps* for details
 - build: -1
 - configure: +2 -1 (recommends: +1)
 - develop: +54 -2 (recommends: +1 -1, suggests: +1 ↑1)
 - runtime: (recommends: +1)
 - test: +3 ↓1 -2 (recommends: +3)

0.01060817 2013-04-10T06:25:04Z
 [Dependencies::Stats]
 - Dependencies changed since 0.01060816, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +5 (suggests: ↑1)
 - test: ↑1

 [Documentation]
 - Update copyright year
 - Add README.mkdn

 [Meta]
 - Bug tracker to github issues

 [Packaging]
 - Utilise test_requires in Build.PL

0.01060816 2012-03-13T06:22:02Z
 - Maintenance Release

 [Dependencies::Stats]
 - Dependencies changed since 0.01060815, see misc/*.deps* for details
 - develop: (recommends: ↑1, suggests: ↑1)
 - runtime: +3
 - test: -1

 [Internals]
 - Move $VERSION declarations out of BEGIN
 - Declare $AUTHORITY in all namespaces.

 [Packaging]
 - Update LICENSE (  Year, Indent, Address )
 - Moved release/author tests to xt/
 - Move github uri's to https://
 - add x_authority to meta
 - move to git versions
 - regenerate compile tests.

0.01060815 2011-04-14T03:32:21Z
 - Maintenance release.

 [Dependencies::Stats]