@@ -1,6 +1,11 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Bugfix: avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.000002, see misc/*.deps* for details
+ - develop: +3 ↑2 (suggests: ↑2)
 
 1.000002 2015-08-16T08:09:03Z 7e56737
  [Documentation]
